--- a/index.html
+++ b/index.html
@@ -21,7 +21,13 @@
             <input type="button" value="Find Food Now"/>
         </form>
     </div>    
-
+    <section class="section">
+        <div class="section__text">
+            <h2>AUTHENTIC. AWESOME.</h2>
+            <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, maiores reprehenderit explicabo ab ad illo eveniet enim velit, exercitationem et recusandae placeat? Maiores laboriosam libero dolore consectetur! Omnis, recusandae expedita!</P>
+        </div>
+        <div class="section__image"></div>
+    </section>
     <script></script>
 </body>
 </html>
