make section responsive

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <h2>AUTHENTIC. AWESOME.</h2>
             <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, maiores reprehenderit explicabo ab ad illo eveniet enim velit, exercitationem et recusandae placeat? Maiores laboriosam libero dolore consectetur! Omnis, recusandae expedita!</P>
         </div>
-        <div class="section__image"></div>
+        <img src="./images/charles-deluvio-D-vDQMTfAAU-unsplash.jpg" class="section__image" alt="bool magic"/>
     </section>
     <script></script>
 </body>
